# platitude

./: LICENSE  README.md
fam_test/: CMakeLists.txt  Fam.hh
src/common/: CMakeLists.txt  Comms.hh  DataIterator.hh  DataStore.hh  DataStoreTest.cpp  DataTable.hh  ZeromqComms.hh  client.cpp  main.cpp  stuff.hh
src/prototype/fam_test/: CMakeLists.txt  main.cpp
src/prototype/web_server/: CMakeLists.txt  HttpServer.cpp
